--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 
 body {
   background: #1D1D1D;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
