--- a/src/components/styles/Movies.module.css
+++ b/src/components/styles/Movies.module.css
@@ -1,6 +1,31 @@
+
 .movies > div > img{
     width: 200px;
-    height: 300px;
+    height: 280px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.movies > div > p {
+    color: white;
+    cursor: pointer;
+    max-width: 250px;
+    text-align: center;
+}
+.movies > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.movies > div > .year{
+    position: absolute;
+    color: white;
+    right: 15px;
+    bottom: 60px;
+    background-color: blue;
+    padding: 2px 5px;
     border-radius: 5px;
 }
 
@@ -16,13 +41,22 @@
 
 .h2{
     text-align: center;
+    font-size: 24px;
     color: white;
+    padding: 15px 0px;
 }
 
 @media (min-width: 600px) {
     .movies{
 
         grid-template-columns: repeat(2, 1fr); 
+
+    }
+    .movies > div > img{
+        height: 300px;
+    }
+    .h2{
+        font-size: 26px;
     }
 }
 
@@ -30,6 +64,9 @@
     .movies{
         grid-gap: 4rem;
         grid-template-columns: repeat(3, 1fr); 
+    }
+    .h2{
+        font-size: 28px;
     }
 }
 
