--- a/src/components/styles/Movies.module.css
+++ b/src/components/styles/Movies.module.css
@@ -1,9 +1,13 @@
 
-.movies > div > img{
+.movie_img > img{
     width: 200px;
     height: 280px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.movie_img{
+    position: relative;
 }
 
 .movies > div > p {
@@ -16,14 +20,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    
 }
 
-.movies > div > .year{
+.year{
     position: absolute;
     color: white;
-    right: 15px;
-    bottom: 60px;
+    right: 10px;
+    bottom: 20px;
     background-color: blue;
     padding: 2px 5px;
     border-radius: 5px;
