--- a/src/components/styles/Carousel.css
+++ b/src/components/styles/Carousel.css
@@ -37,8 +37,10 @@
     width: 100%;
     height: 50%;
     object-fit: cover;
+    
   }
 
+ 
   .image_container{
       position: relative;
   }
@@ -62,6 +64,8 @@
     font-weight: 600;
     font-size: 26px;
     margin: 2px;
+    cursor: pointer;
+    
   }
 
   .carousel_summer_container > p{
@@ -69,6 +73,7 @@
     font-size: 10px;
     padding: 0px 30px;
     margin: 0;
+
   }
 
   .stars_container > img{
@@ -93,6 +98,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
   }
 
   @media (min-width: 370px) {
