--- a/src/components/styles/MovieDetail.module.css
+++ b/src/components/styles/MovieDetail.module.css
@@ -5,6 +5,10 @@
   
 }
 
+.bar > img{
+  cursor: pointer;
+}
+
 .stars{
   margin-top: 10px;
 }
@@ -18,6 +22,10 @@
   padding-top: 15px;
 }
 
+.detail_container > h2{
+  font-size: 22px;
+}
+
 .detail_container > img{
   width: 85%;
   border-radius: 5px;
@@ -28,56 +36,122 @@
   width: 90%;
   margin-top: 20px;
   text-align: center;
+  font-size: 16px;
   
 }
 
 .tagline{
   width: 90%;
   text-align: center;
+  font-size: 16px;
+}
+
+@media (min-width: 500px) {
+  .detail_container > h2{
+    font-size: 24px;
+  }
+  .detail_container > img{
+    width: 70%;
+  }
+  .overview{
+    font-size: 18px;
+  }
+  
+  .tagline{
+    font-size: 18px;
+  }
+
+  .stars > img{
+    width: 28px;
+    height: 28px;
+  }
+
+  .bar > img{
+    width: 28px;
+    height: 28px;
+  }
+}
+
+@media (min-width: 700px) {
+  .detail_container > h2{
+    font-size: 26px;
+  }
+  .detail_container > img{
+    width: 55%;
+  }
+  .overview{
+    font-size: 20px;
+  }
+  
+  .tagline{
+    font-size: 20px;
+  }
+
+  .stars > img{
+    width: 30px;
+    height: 30px;
+  }
+
+  .bar > img{
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (min-width: 850px) {
+  .detail_container > h2{
+    font-size: 28px;
+  }
+  .detail_container > img{
+    width: 45%;
+    height: auto;
+  }
+  .overview{
+    font-size: 22px;
+  }
+  
+  .tagline{
+    font-size: 22px;
+  }
+
+  .stars > img{
+    width: 32px;
+    height: 32px;
+  }
+
+  .bar > img{
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .detail_container > h2{
+    font-size: 30px;
+  }
+  .detail_container > img{
+    width: 35%;
+    height: auto;
+  }
+  .overview{
+    font-size: 24px;
+    margin-top: 30px;
+  }
+  
+  .tagline{
+    font-size: 24px;
+  }
+
+  .stars > img{
+    width: 34px;
+    height: 34px;
+  }
+
+  .bar > img{
+    width: 34px;
+    height: 34px;
+  }
 }
 
 
-
-.lds_container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-top: 25px;
-}
-
-.lds_ring {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds_ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #fff;
-    border-radius: 50%;
-    animation: lds_ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #fff transparent transparent transparent;
-  }
-  .lds_ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds_ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds_ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds_ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
   
