--- a/src/components/styles/Carousel.css
+++ b/src/components/styles/Carousel.css
@@ -60,12 +60,19 @@
       
   }
 
-  .carousel_summer_container > h3{
+  .carousel_title_container > h3{
     font-weight: 600;
     font-size: 26px;
     margin: 2px;
     cursor: pointer;
+    width: auto;
+    max-width: 200px;
     
+  }
+
+  .carousel_title_container {
+    display: flex;
+    justify-content: center;
   }
 
   .carousel_summer_container > p{
@@ -102,9 +109,10 @@
   }
 
   @media (min-width: 370px) {
-    .carousel_summer_container > h3{
+    .carousel_title_container > h3{
       font-size: 28px;
       margin-top: 10px;
+      max-width: 250px;
     }
   
     .carousel_summer_container > p{
@@ -119,8 +127,9 @@
   }
 
   @media (min-width: 425px) {
-    .carousel_summer_container > h3{
+    .carousel_title_container > h3{
       font-size: 34px;
+      max-width: 275px;
     }
   
     .carousel_summer_container > p{
@@ -139,9 +148,10 @@
 
 
   @media (min-width: 550px) {
-    .carousel_summer_container > h3{
+    .carousel_title_container > h3{
       font-size: 38px;
       margin-top: 25px;
+      max-width: 325px;
     }
   
     .carousel_summer_container > p{
@@ -150,9 +160,10 @@
   }
 
   @media (min-width: 600px) {
-    .carousel_summer_container > h3{
+    .carousel_title_container > h3{
       font-size: 41px;
       margin-top: 35px;
+      max-width: 400px;
     }
   
     .carousel_summer_container > p{
@@ -162,8 +173,10 @@
 
 
   @media (min-width: 700px) {
-    .carousel_summer_container > h3{
+    .carousel_title_container > h3{
       font-size: 45px;
+      max-width: 525px;
+     
     }
   
     .carousel_summer_container > p{
@@ -181,6 +194,12 @@
     .carousel_summer_container{
       justify-content: center;
       height: 400px;
+      
+    }
+
+    .carousel_title_container > h3{
+      max-width: 600px;
+     
     }
 
     .stars_container > img{
