--- a/src/components/styles/SearchMovies.module.css
+++ b/src/components/styles/SearchMovies.module.css
@@ -1,18 +1,20 @@
 .nav {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
-    
     
   }
 
   .icon_container{
       display: flex;
-      justify-content: flex-end;
-      padding: 5px;
+      justify-content: center;
+      width: 15%;
   }
 
+  .searchbar_container{
+    width: 85%;
+  }
 
   
   .nav > .icon_container > img{
@@ -21,3 +23,14 @@
    height: 28px;
   }
   
+  @media (min-width: 550px) {
+    .icon_container{
+      width: auto;
+      margin-left: 5%;
+  }
+  .searchbar_container  > div {
+    width: 100%;
+    justify-content: flex-end;
+    
+  }
+  }
