--- a/src/components/styles/Searchbar.module.css
+++ b/src/components/styles/Searchbar.module.css
@@ -1,8 +1,8 @@
 .search_container{
     height: 90px;
-    width: 95%;
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
